medium mode complete

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html * {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Oswald", sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 .ScoreBoard {
@@ -29,14 +29,18 @@ body {
 
 .Game {
   text-align: center;
+  background-color: lightyellow;
+  border: 3px solid black;
 }
 
 .Team {
   display: flex;
+  background: gray;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   height: 30rem;
+  border: 2px solid black;
 }
 
 .Team .identity {
@@ -45,6 +49,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border: 2px solid red;
 }
 
 .Team img {
@@ -66,7 +71,7 @@ body {
 .versus h1 {
   font-family: againtsregular, oswald, sans-serif;
   font-size: 500%;
-  color: #fc0;
+  color: black;
   text-shadow: 2px 2px 0 black;
 }
 
