--- a/style.css
+++ b/style.css
@@ -68,10 +68,14 @@ button {
   width: 100%;
   padding: 0.5rem;
   margin-bottom: 1em;
-  background-color: rgb(219, 200, 121);
+  background-color: hsl(48, 80%, 76%);
   border: 1px solid black;
   font-family: Oswald, sans-serif;
   text-transform: uppercase;
   font-size: 1.2em;
   box-shadow: 2px 2px 0 black;
+}
+.Scoreboard {
+  background-color: hsl(48, 80%, 76%);
+  border: 2px solid black;
 }
